--- a/provider/pkg/provider/aws/userdata.tmpl
+++ b/provider/pkg/provider/aws/userdata.tmpl
@@ -20,3 +20,8 @@ sudo yum install tailscale -y
 sudo systemctl enable --now tailscaled
 sleep 10
 sudo tailscale up --advertise-connector="{{ .EnableAppConnector }}" --advertise-exit-node="{{ .EnableExitNode }}" --hostname="{{ .Hostname}}" --ssh="{{ .EnableSSH }}" --advertise-tags="{{ .TailscaleTags}}" {{if .Routes}}--advertise-routes="{{ .Routes }}"{{end}} --authkey=$(aws ssm get-parameter --name {{.ParameterName}} --region {{.Region}} --with-decryption | jq .Parameter.Value -r) --host-routes
+
+{{if .PeerRelayEnable}}
+echo "Configuring peer relay server on port {{ .PeerRelayPort }}"
+sudo tailscale set --relay-server-port={{ .PeerRelayPort }}
+{{end}}
