--- a/provider/pkg/provider/azure/userdata.tmpl
+++ b/provider/pkg/provider/azure/userdata.tmpl
@@ -18,3 +18,8 @@ sudo apt-get update
 sudo apt-get install -y azure-cli tailscale
 
 sudo tailscale up --advertise-connector="{{ .EnableAppConnector }}" --advertise-exit-node="{{ .EnableExitNode }}" --hostname="{{ .Hostname}}" --ssh="{{ .EnableSSH }}" --advertise-tags="{{ .TailscaleTags}}" {{if .Routes}}--advertise-routes="{{ .Routes }}"{{end}} --authkey="{{ .AuthKey }}" --host-routes --accept-dns=false
+
+{{if .PeerRelayEnable}}
+echo "Configuring peer relay server on port {{ .PeerRelayPort }}"
+sudo tailscale set --relay-server-port={{ .PeerRelayPort }}
+{{end}}
